--- a/src/components/contacts/Contacts.module.css
+++ b/src/components/contacts/Contacts.module.css
@@ -1,6 +1,6 @@
 .section {
   padding: 140px 16px 0;
-  text-align: center;
+  background-color: #e5e5e5;
 }
 
 .button {
@@ -13,17 +13,19 @@
 }
 
 .button:hover {
-  background-color: #f4f804;
+  background-color: #ffe302;
 }
 
 .contacts__title {
   margin-bottom: 50px;
-  text-align: center;
   font-size: 40px;
   line-height: 1;
 }
 
 .contacts__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-bottom: 50px;
 }
 
